fix spacing

--- a/emoji.css
+++ b/emoji.css
@@ -44,7 +44,7 @@ input {
 
 button {
     font-family: Baloo,sans-serif;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     background: darkcyan;
     color: white;
     border: none;
